--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@
 /website/umbraco_client
 /website/default.aspx
 /website/Volotea.Web/aspnet_client
-website/_ReSharper.travel/*
+/website/_ReSharper.travel/*
+/website/obj/
+/website/Debug/
+website/bin/*.pdb
+website/obj/Debug/*.dll
+website/bin/*.pdb
