Control empty fields and changed labels from home and page

--- a/website/Web.config
+++ b/website/Web.config
@@ -25,6 +25,8 @@
 	<FileSystemProviders configSource="config\FileSystemProviders.config"/>
 	<appSettings>
 		<add key="umbracoDbDSN" value="server=(local);database=travel;user id=sa;password=sa"/>
+		<!--<add key="umbracoDbDSN" value="server=mssql3.unoeuro.com;database=bcntravelconsulting_com_db;user id=bcntravelc_com;password=newshore2013"/>-->
+    <!--<add key="umbracoDbDSN" value="server=db497736038.db.1and1.com,1433;database=db497736038;user id=dbo497736038;password=Newshore2013"/>-->
 		<add key="umbracoConfigurationStatus" value="4.9.1"/>
 		<add key="umbracoReservedUrls" value="~/config/splashes/booting.aspx,~/install/default.aspx,~/config/splashes/noNodes.aspx,~/VSEnterpriseHelper.axd"/>
 		<add key="umbracoReservedPaths" value="~/umbraco,~/install/"/>
@@ -62,7 +64,7 @@
 		<!--<add name="LocalSqlServer" connectionString="server=.\sqlexpress;database=aspnetdb;user id=DBUSER;password=DBPASSWORD" providerName="System.Data.SqlClient"/>-->
 	</connectionStrings>
 	<system.web>
-		<customErrors mode="RemoteOnly"/>
+		<customErrors mode="Off"/>
 		<trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true"/>
 		<sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes" cookieless="false" timeout="20"/>
 		<globalization requestEncoding="UTF-8" responseEncoding="UTF-8"/>
