--- a/website/travel.csproj
+++ b/website/travel.csproj
@@ -19,9 +19,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <ExcludeApp_Data>true</ExcludeApp_Data>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -190,6 +191,7 @@
     <Content Include="bin\x86\sqlcese40.dll" />
     <Content Include="css\blog.css" />
     <Content Include="css\fonts.css" />
+    <Content Include="css\home.css" />
     <Content Include="css\libs\bootstrap\bootstrap.css" />
     <Content Include="css\libs\bootstrap\navbar.css" />
     <Content Include="css\mixins.css" />
@@ -199,14 +201,16 @@
     <Content Include="css\nivo-slider\themes\default\default.css" />
     <Content Include="css\nivo-slider\themes\default\loading.gif" />
     <Content Include="css\normalize.css" />
+    <Content Include="css\page.css" />
     <Content Include="css\print.css" />
     <Content Include="css\styles.css" />
     <Content Include="css\uBlogsy.css" />
+    <Content Include="css\umbracoStyles.css" />
     <Content Include="default.aspx" />
     <Content Include="fonts\glyphiconshalflings-regular.svg" />
     <Content Include="fonts\hero-webfont.svg" />
     <Content Include="Images\uBlogsy_feed-icon-14x14.png" />
-    <Content Include="img\avatar-noimg.jpg" />
+    <Content Include="img\defaultImage.jpg" />
     <Content Include="img\big-banner_1.jpg" />
     <Content Include="img\big-banner_2.jpg" />
     <Content Include="img\btc-logo.png" />
