Change pc Albert

--- a/website/Web.config
+++ b/website/Web.config
@@ -24,7 +24,7 @@
 	<ExamineLuceneIndexSets configSource="config\ExamineIndex.config"/>
 	<FileSystemProviders configSource="config\FileSystemProviders.config"/>
 	<appSettings>
-		<add key="umbracoDbDSN" value="server=(local);database=travel;user id=sa;password=sa"/>
+		<add key="umbracoDbDSN" value="server=.\SQLEXPRESS;database=travel;user id=sa;password=sa"/>
 		<!--<add key="umbracoDbDSN" value="server=mssql3.unoeuro.com;database=bcntravelconsulting_com_db;user id=bcntravelc_com;password=newshore2013"/>-->
     <!--<add key="umbracoDbDSN" value="server=db497736038.db.1and1.com,1433;database=db497736038;user id=dbo497736038;password=Newshore2013"/>-->
 		<add key="umbracoConfigurationStatus" value="4.9.1"/>
